# Day04-C401-Prompt-Engineering-Tool-Calling-Labs-student

./: .gitignore  README.md  TOOL-SETUP.md  pyproject.toml
starter_v0/: .env.example  .gitignore  agent.py  app.py  chat.py  pyproject.toml  requirements.txt  run_eval.py  server.py  streamlit_app.py  ui.py  ui_server.py  web_ui.py
starter_v0/analysis/: base_group_runs.csv  base_runs.csv  v0_B_base_gemini_20260602T144003498658.csv  v1_B_base_gemini_20260602T145712013136.csv  v2_B_base_gemini_20260602T145930465665.csv  v3_B_base_gemini_20260602T150333033907.csv  v3_B_base_gemini_20260602T160835152753.csv  v4_B_base_gemini_20260602T163110848785.csv
starter_v0/artifacts/: REPORT.md  REPORT1.md  REPORT_NHOM.md  demo_REPORT.md  system_prompt.md  tools.yaml  version_log.csv
starter_v0/backend/: file_readers.py  main.py
starter_v0/data/: eval_base.json  eval_group.json  eval_research_extension.json
starter_v0/frontend/: tsconfig.tsbuildinfo
starter_v0/logs/: ai_research.json  chat_log.json  my_session.json
starter_v0/providers/: __init__.py  gemini_provider.py  openai_provider.py  opencode_provider.py  openrouter_provider.py
starter_v0/runs/: v0_B_base_anthropic_20260602T150053782005.json  v0_B_base_anthropic_20260602T152405607313.json  v0_B_base_gemini_20260602T123816407145.json  v0_B_base_gemini_20260602T124841331389.json  v0_B_base_gemini_20260602T135510357476.json  v0_B_base_gemini_20260602T143303211665.json  v0_B_base_gemini_20260602T144003498658.json  v0_B_base_openai_20260602T125759908390.json  v0_B_base_openai_20260602T125819035188.json  (+132 more)
(+167 files in other folders)
