[project]
name = "starter-v0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.34.0",
    "fastapi>=0.136.3",
    "google-genai>=0.8.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "uvicorn>=0.48.0",
]
